--- a/workshop3/MainWindow.xaml
+++ b/workshop3/MainWindow.xaml
@@ -6,6 +6,9 @@
         xmlns:local="clr-namespace:workshop3"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
+    <Window.DataContext>
+        
+    </Window.DataContext>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="639*"/>
