--- a/workshop3/MainWindow.xaml
+++ b/workshop3/MainWindow.xaml
@@ -6,7 +6,9 @@
         xmlns:local="clr-namespace:workshop3"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    
+    <Window.Resources>
+        <local:trooperConverter x:Key="colorConverter" />
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="639*"/>
@@ -20,6 +22,7 @@
                             <Label Content="{Binding Vitality}" Margin="10"/>
                             <Label Content="{Binding Speed}" Margin="10"/>
                             <Label Content="{Binding Cost}" Margin="10"/>
+                            
                         </StackPanel>
                     </Border>
                 </DataTemplate>
