--- a/workshop3/MainWindow.xaml
+++ b/workshop3/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
-        <local:trooperConverter x:Key="colorConverter" />
+        <local:trooperConverter x:Key="trooperConverter" />
     </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -19,7 +19,10 @@
                 <DataTemplate>
                     <Border BorderBrush="Black" BorderThickness="1">
                         <StackPanel Orientation="Horizontal"  Background="{Binding Name}">
-                            <ProgressBar Maximum="10" Value="{Binding Vitality}" Foreground="{Binding Vitality, Converter={StaticResource colorConverter}}" Height="10" Margin="10" />
+                            <Label Content="{Binding Name}" Margin="10"  />
+                            <Label Content="{Binding Vitality, Converter={StaticResource trooperConverter}}" Margin="10"/>
+                            <Label Content="{Binding Speed}" Margin="10"/>
+                            <Label Content="{Binding Cost}" Margin="10"/>
                         </StackPanel>
                     </Border>
                 </DataTemplate>
